@@ -318,6 +318,8 @@
 9) kernel: ralink wifi: fix m2u filter table. Add MDNS and fix IgmpV3 filter.<br>
 10) kernel: tcp: limit GSO packets to half cwnd.<br>
 11) kernel: fix misuses of f_count() in ppp.<br>
+12) kernel: mips: jump_label.c: Correct the span of the J instruction.<br>
+13) kernel: mips: jump_label.c: Handle the microMIPS J instruction encoding.<br>
 <br>
 <br>
 <b>TODO:</b><br>
